changes support to contact us in sidebar

--- a/Navpage(loggedOut).html
+++ b/Navpage(loggedOut).html
@@ -20,7 +20,7 @@
 	<div id="sidebar" class="cSidebar">
 	    <button class="openButton" onclick="openNav()">☰</button>
 		<a href="#">About&nbsp;us</a> 
-		<a href="#">Support</a>
+		<a href="#">Contact&nbsp;us</a>
 	</div>
 	<div id="navbutton">
 		<button class="openButton" onclick="openNav()">☰</button></div>
