linked the about us link in the sidebar to the about us page

--- a/Navpage(loggedOut).html
+++ b/Navpage(loggedOut).html
@@ -19,7 +19,7 @@
 <nav>
 	<div id="sidebar" class="cSidebar">
 	    <button class="openButton" onclick="openNav()">☰</button>
-		<a href="#">About&nbsp;us</a> 
+		<a href="AboutUs.html">About&nbsp;us</a> 
 		<a href="#">Contact&nbsp;us</a>
 	</div>
 	<div id="navbutton">
