--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,7 +20,7 @@
 <nav>
 	<div id="sidebar" class="cSidebar">
 	    <button class="openButton" onclick="openNav()">☰</button>
-		<a href="#">About&nbsp;us</a> 
+		<a href="AboutUs.html">About&nbsp;us</a> 
 		<a href="#">Contact&nbsp;us</a>
 	</div>
 	<div id="navbutton">
